# tilemap-editor

./: CMakeLists.txt  LICENSE
assets/shaders/fragment/: highlight.frag  mask.frag  tileButton.frag
include/: Common.h
include/GUI/: AnchorsType.h  Button.h  Common.h  Dropdown.h  GuiElement.h  GuiLayer.h  MainGUI.h  Panel.h  TextElement.h  TextInput.h  Tilegrid.h
include/engine/: Application.h  DialogExplorer.h  Editor.h  Singleton.h
include/graphics/: BackgroundGrid.h  PixelPerfectRenderTarget.h
include/level/: Grid.h  Level.h  Tile.h  TileInfo.h
include/managers/: AssetLoader.h  FontManager.h  ShaderManager.h  TextureManager.h
src/: main.cpp
src/GUI/: Button.cpp  Dropdown.cpp  GuiElement.cpp  GuiLayer.cpp  MainGUI.cpp  Panel.cpp  TextElement.cpp  TextInput.cpp  Tilegrid.cpp
src/engine/: Application.cpp  DialogExplorer.cpp  Editor.cpp
src/graphics/: BackgroundGrid.cpp  PixelPerfectRenderTarget.cpp
src/level/: Grid.cpp  Level.cpp  Tile.cpp  TileInfo.cpp
src/managers/: FontManager.cpp  TextureManager.cpp
test/: test_GuiElement.cpp
